k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parking-app-ingress
  namespace: cloud-parking
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 5001
      - path: /parking
        pathType: Prefix
        backend:
          service:
            name: parking-service
            port:
              number: 5002
      - path: /booking
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 5003
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
